--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>Project Klaus</title>
 </head>
-<body>
+<body style="overflow: hidden">
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
